# social-media-app

./: .env.example  .gitignore  API_ENDPOINTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  models.py  schemas.py
app/routers/: bio.py  comments.py  follows.py  posts.py  users.py
app/ws/: manager.py
scripts/: add_bio.py  generate_comments.py  generate_follows.py  generate_likes.py  generate_posts.py  generate_user.py
