[project]
name = "social-media-clonev2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "faker>=40.15.0",
    "fastapi[standard]>=0.136.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "redis[asyncio]>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "tortoise-orm[asyncpg]>=1.1.7",
    "uuid>=1.30",
    "uuid6>=2025.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
